# ml_engineering

./: README.md
lab1/: .gitignore  README.md  REPORT.md  pyproject.toml
lab1/artifacts/: metrics.yaml
lab1/config/: config.yaml
lab1/src/: data_download.py  data_ingestion.py  main.py  train.py
lab2/: .gitignore  README.md  REPORT.md  pyproject.toml
lab2/artifacts/: comparison.yaml
lab2/artifacts/1batch/: best_model.pth  metrics.yaml
lab2/artifacts/3batch/: best_model.pth  metrics.yaml
lab2/artifacts/5batch/: best_model.pth  metrics.yaml
lab2/config/: config_1batch.yaml  config_3batch.yaml  config_5batch.yaml
lab2/src/: data_loader.py  evaluate.py  main.py
lab3/: README.md  REPORT.md  dvc.yaml  params.yaml  pyproject.toml
lab3/artifacts/: .gitignore  metrics.json
lab3/src/: data_loader.py  download.py  evaluate.py  train.py
lab4/: .gitignore  README.md  REPORT.md  pyproject.toml
lab4/artifacts/1batch/: metrics.json
lab4/artifacts/3batch/: metrics.json
lab4/artifacts/5batch/: metrics.json
lab4/config/: config_1batch.yaml  config_5batch.yaml
lab4/src/: evaluate.py  main.py  model.py  train.py
